[package]
name = "cli_gen"
version = "0.1.0"
authors = ["aleksey.kondrashkov <test@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.1"
clap = "2.33.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_yaml = "0.8.9"
rayon = "1.2.0"
itertools = "0.8.0"
chrono = "0.4.9"
rand = "0.7.1"
