[package]
name = "cli_gen"
version = "0.1.0"
authors = ["aleksey.kondrashkov <test@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.1"
clap = "2.33.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_yaml = "0.8.9"
serde_json = "1.0.40"
csv = "1.1.1"
rayon = "1.2.0"
itertools = "0.8.0"
chrono = "0.4.9"
rand = { version = "0.7", features = ["small_rng"] }
rand_distr = "0.2"
average = "0.10.3"
hdrhistogram = "= 6.3.4"
crossbeam-channel = "0.3.9"
crossbeam-deque = "0.7.1"
num_cpus = "1.10.1"
glob = "0.3.0"
humantime = "1.3.0"
libm = "0.1.4"